Cases UI: Fixed spacing between titles and next project subtitle.

--- a/app/scss/views/_cases.scss
+++ b/app/scss/views/_cases.scss
@@ -105,7 +105,7 @@
 			margin-bottom: 180px;
 
 			.subtitle{
-				margin-bottom: 80px;
+				margin-bottom: 75px;
 			}
 
 			.images-container{
@@ -187,7 +187,7 @@
 		margin-bottom: 40px;
 
 		.subtitle{
-			margin-bottom: 58px;
+			margin-bottom: 36px;
 		}
 
 		.title{
